<resources>
    <string name="app_name">Group B Scheduling Software SE Fall 2022</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="schedule_name_popup">Name schedule</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="e_mall_address">E-mall address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="scheduleme">ScheduleMe!</string>
    <string name="create">Create</string>
    <string name="create_event">Create Event</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create account</string>
    <string name="username">Enter Username</string>
    <string name="event_name">Enter Event Name</string>
    <string name="event_date">Enter Event Date</string>
    <string name="event_month">Enter Event Month</string>
    <string name="event_hour">Enter Starting Hour</string>
    <string name="event_minute">Enter Starting Minute</string>
    <string name="event_duration">Enter Event Duration (in minutes)</string>
    <string name="event_description">Enter Event Description</string>
    <string name="Event_name">Event Name</string>
    <string name="event_Name">Event Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_label">Edit</string>
    <string name="name">Name</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">End Time</string>
    <string name="back">Back</string>
    <string name="selected_date">Selected date:</string>
    <string name="view">VIEW</string>
    <string name="log_out">Logout</string>
    <string name="share_label">Share</string>
    <string name="events">Events:</string>
    <string name="which_user_would_you_like_to_send_an_event_to">Which user would you like to send an event to?</string>
    <string name="what_event_would_you_like_to_send">What event would you like to send?</string>
    <string name="view_shared">Shared with me</string>
    <string name="accept">Accept</string>
    <string name="submit">Submit</string>
    <string name="Day">Day</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="enter_event_to_edit">Enter event to edit</string>
</resources>