<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idDayEventViews"
        android:layout_width="match_parent"
        android:layout_height="658dp" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="670dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:layout_marginStart="160dp"
        android:layout_marginTop="670dp"/>

    <EditText
        android:id="@+id/editEnter"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="670dp"
        android:ems="10"
        android:hint="@string/enter_event_to_edit"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/EditEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="670dp"
        android:text="@string/edit_label" />

    <FrameLayout
        android:id="@+id/fragContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</RelativeLayout>