<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <CalendarView
        android:id="@+id/calendarViewId"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="310dp"
        android:text="@string/create"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="400dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/event_Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/Event_name" />
</RelativeLayout>