<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/linearLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <EditText
    android:id="@+id/editTextTextEmailAddress"
    android:layout_width="310dp"
    android:layout_height="52dp"
    android:layout_marginBottom="4dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/e_mall_address"
    android:inputType="textEmailAddress"
    android:textColorHint="#757575"
    app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.915" />
  <EditText
    android:id="@+id/editTextTextPassword"
    android:layout_width="309dp"
    android:layout_height="55dp"
    android:layout_marginBottom="144dp"
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    app:layout_constraintBottom_toTopOf="@+id/button2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:autofillHints="" />
  <Button
    android:id="@+id/button2"
    android:layout_width="274dp"
    android:layout_height="56dp"
    android:text="@string/log_in"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>