<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.groupbschedulingsoftwaresefall2022.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
          android:id="@+id/action_FirstFragment_to_SecondFragment"
          app:destination="@id/SecondFragment" />
        <action
          android:id="@+id/action_FirstFragment_to_ScheduleNamePopup"
          app:destination="@id/ScheduleNamePopup" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.groupbschedulingsoftwaresefall2022.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
          android:id="@+id/action_SecondFragment_to_ScheduleNamePopup"
          app:destination="@id/ScheduleNamePopup" />
    </fragment>
    <fragment
      android:id="@+id/ScheduleNamePopup"
      android:name="com.example.groupbschedulingsoftwaresefall2022.SecondFragment"
      android:label="@string/schedule_name_popup"
      tools:layout="@layout/schedulenamepopup">

        <action
          android:id="@+id/action_ScheduleNamePopup_to_SecondFragment"
          app:destination="@id/SecondFragment" />
        <action
          android:id="@+id/action_ScheduleNamePopup_to_FirstFragment"
          app:destination="@id/FirstFragment" />
    </fragment>
</navigation>