<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:text="@string/scheduleme"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
      android:id="@+id/editTextTextEmailAddress2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/email_address"
      android:inputType="textEmailAddress"
      android:minHeight="48dp"
      android:textColorHint="#757575"
      app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      android:autofillHints="" />

    <EditText
      android:id="@+id/editTextTextPassword2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="164dp"
      android:ems="10"
      android:hint="Password"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textColorHint="#757575"
      app:layout_constraintBottom_toTopOf="@+id/createacc_id"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      android:autofillHints="" />
    <Button
      android:id="@+id/createacc_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="148dp"
      android:text="@string/create_account"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>